--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
         "dev": "tsnd -T --pretty --ignore-watch node_modules --respawn src/server.ts"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "@prisma/client": "^3.5.0"
     },
     "devDependencies": {
-        "@prisma/client": "^3.5.0",
         "@types/express": "^4.17.13",
         "@types/node": "^16.11.10",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
