--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "src/server.js",
     "license": "MIT",
     "scripts": {
-        "dev": "tsnd -T --pretty --ignore-watch node_modules --respawn src/server.ts"
+        "dev": "tsnd -T --pretty --ignore-watch node_modules --respawn src/shared/infra/http/server.ts"
     },
     "dependencies": {
         "express": "^4.17.1",
