--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "main": "src/server.js",
     "license": "MIT",
     "scripts": {
-        "dev": "tsnd -T --pretty --ignore-watch node_modules --respawn src/shared/infra/http/server.ts"
+        "dev": "tsnd -T -r tsconfig-paths/register --pretty --ignore-watch node_modules --respawn src/shared/infra/http/server.ts"
     },
     "dependencies": {
-        "express": "^4.17.1",
-        "@prisma/client": "^3.5.0"
+        "@prisma/client": "^3.5.0",
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
@@ -25,6 +25,7 @@
         "prettier": "^2.4.1",
         "prisma": "3.5.0",
         "ts-node-dev": "^1.1.8",
+        "tsconfig-paths": "^3.12.0",
         "typescript": "^4.5.2"
     }
 }
