--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     },
     "dependencies": {
         "@prisma/client": "^3.5.0",
-        "express": "^4.17.1"
+        "bcrypt": "^5.0.1",
+        "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^8.5.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.6",
         "@types/node": "^16.11.10",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
